[package]
name = "jwt-lc-rs"
version = "0.1.0-dev"
edition = "2021"
authors = ["noaione <noaione@n4o.xyz>"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/noaione/jwt-lc-rs"
rust-version = "1.81.0"

[package.metadata.docs.rs]
features = ["fips", "pem"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
aws-lc-rs = { version = "1.12.2", default-features = false, features = [
    "alloc",
    "ring-io",
    "ring-sig-verify"
] }
base64 = "^0.22"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"

simple_asn1 = { version = "0.6.3" }
pem = { version = "3.0.4", optional = true }

[dev-dependencies]
serde = { version = "^1.0", features = ["derive"] }
jwt-lc-rs = {  path = ".", features = ["fips", "pem"] }

[features]
default = ["fips"]
fips = ["aws-lc-rs/fips"]
non_fips = ["aws-lc-rs/non-fips"]

pem = ["dep:pem"]
