[package]
name = "jwt-lc-rs"
version = "0.1.1-dev"
edition = "2021"
authors = ["noaione <noaione@n4o.xyz>"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/noaione/jwt-lc-rs"
rust-version = "1.81.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
aws-lc-rs = { version = "1.13.0", default-features = false, features = [
    "alloc",
    "fips",
    "ring-io",
    "ring-sig-verify"
] }
base64 = "^0.22"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"

simple_asn1 = { version = "0.6.3" }
pem = { version = "3.0.5", optional = true }

[dev-dependencies]
serde = { version = "^1.0", features = ["derive"] }
jwt-lc-rs = { path = ".", features = ["pem"] }

[features]
pem = ["dep:pem"]
